HW1/MIPLParser.py
# Generated from MIPL.g4 by ANTLR 4.5.1
# encoding: utf-8
from antlr4 import *
from io import StringIO



class MIPLParser ( Parser ):

    grammarFileName = "MIPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'write'", "'+'", "'-'", 
                     "'or'", "'array'", "'['", "']'", "'of'", "':='", "'true'", 
                     "'('", "')'", "'*'", "','", "'..'", "'.'", "':'", "';'", 
                     "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'and'", 
                     "'begin'", "'boolean'", "'char'", "'div'", "'do'", 
                     "'else'", "'end'", "'false'", "'if'", "'integer'", 
                     "'not'", "'procedure'", "'program'", "'read'", "'then'", 
                     "'var'", "'while'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'''", "'_'", "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "T_COMMENT", "T_WRITE", "T_PLUS", "T_MINUS", 
                      "T_OR", "T_ARRAY", "T_LBRACK", "T_RBRACK", "T_OF", 
                      "T_ASSIGN", "T_TRUE", "T_LPAREN", "T_RPAREN", "T_MULT", 
                      "T_COMMA", "T_DOTDOT", "T_DOT", "T_COLON", "T_SCOLON", 
                      "T_LT", "T_LE", "T_NE", "T_EQ", "T_GT", "T_GE", "T_AND", 
                      "T_BEGIN", "T_BOOL", "T_CHAR", "T_DIV", "T_DO", "T_ELSE", 
                      "T_END", "T_FALSE", "T_IF", "T_INT", "T_NOT", "T_PROC", 
                      "T_PROG", "T_READ", "T_THEN", "T_VAR", "T_WHILE", 
                      "T_INTCONST", "T_IDENT", "T_CHARCONST", "QUOTE", "UNDERSCORE", 
                      "WSPACE", "NEWLINE", "SIGN", "COUNT_DIGIT", "DIGIT", 
                      "LO_ALPHA", "HI_ALPHA", "ALPHA", "ALPHANUM", "VALIDINT", 
                      "MAYBEINT", "INVALINT", "IDENT", "CHARCONST", "BADCHARCONST" ]

    RULE_n_start = 0
    RULE_n_addop = 1
    RULE_n_addoplst = 2
    RULE_n_array = 3
    RULE_n_arrayvar = 4
    RULE_n_assign = 5
    RULE_n_block = 6
    RULE_n_boolconst = 7
    RULE_n_compound = 8
    RULE_n_condition = 9
    RULE_n_const = 10
    RULE_n_entirevar = 11
    RULE_n_expr = 12
    RULE_n_factor = 13
    RULE_n_ident = 14
    RULE_n_identlst = 15
    RULE_n_idx = 16
    RULE_n_idxrange = 17
    RULE_n_idxvar = 18
    RULE_n_inputlst = 19
    RULE_n_inputvar = 20
    RULE_n_intconst = 21
    RULE_n_multop = 22
    RULE_n_multoplst = 23
    RULE_n_output = 24
    RULE_n_outputlst = 25
    RULE_n_procdec = 26
    RULE_n_prochdr = 27
    RULE_n_procdecpart = 28
    RULE_n_procident = 29
    RULE_n_procstmt = 30
    RULE_n_prog = 31
    RULE_n_proglbl = 32
    RULE_n_read = 33
    RULE_n_relop = 34
    RULE_n_sign = 35
    RULE_n_simple = 36
    RULE_n_simpleexpr = 37
    RULE_n_stmt = 38
    RULE_n_stmtlst = 39
    RULE_n_stmtpart = 40
    RULE_n_term = 41
    RULE_n_type = 42
    RULE_n_vardec = 43
    RULE_n_vardeclst = 44
    RULE_n_vardecpart = 45
    RULE_n_variable = 46
    RULE_n_varident = 47
    RULE_n_while = 48
    RULE_n_write = 49

    ruleNames =  [ "n_start", "n_addop", "n_addoplst", "n_array", "n_arrayvar", 
                   "n_assign", "n_block", "n_boolconst", "n_compound", "n_condition", 
                   "n_const", "n_entirevar", "n_expr", "n_factor", "n_ident", 
                   "n_identlst", "n_idx", "n_idxrange", "n_idxvar", "n_inputlst", 
                   "n_inputvar", "n_intconst", "n_multop", "n_multoplst", 
                   "n_output", "n_outputlst", "n_procdec", "n_prochdr", 
                   "n_procdecpart", "n_procident", "n_procstmt", "n_prog", 
                   "n_proglbl", "n_read", "n_relop", "n_sign", "n_simple", 
                   "n_simpleexpr", "n_stmt", "n_stmtlst", "n_stmtpart", 
                   "n_term", "n_type", "n_vardec", "n_vardeclst", "n_vardecpart", 
                   "n_variable", "n_varident", "n_while", "n_write" ]

    EOF = Token.EOF
    T_COMMENT=1
    T_WRITE=2
    T_PLUS=3
    T_MINUS=4
    T_OR=5
    T_ARRAY=6
    T_LBRACK=7
    T_RBRACK=8
    T_OF=9
    T_ASSIGN=10
    T_TRUE=11
    T_LPAREN=12
    T_RPAREN=13
    T_MULT=14
    T_COMMA=15
    T_DOTDOT=16
    T_DOT=17
    T_COLON=18
    T_SCOLON=19
    T_LT=20
    T_LE=21
    T_NE=22
    T_EQ=23
    T_GT=24
    T_GE=25
    T_AND=26
    T_BEGIN=27
    T_BOOL=28
    T_CHAR=29
    T_DIV=30
    T_DO=31
    T_ELSE=32
    T_END=33
    T_FALSE=34
    T_IF=35
    T_INT=36
    T_NOT=37
    T_PROC=38
    T_PROG=39
    T_READ=40
    T_THEN=41
    T_VAR=42
    T_WHILE=43
    T_INTCONST=44
    T_IDENT=45
    T_CHARCONST=46
    QUOTE=47
    UNDERSCORE=48
    WSPACE=49
    NEWLINE=50
    SIGN=51
    COUNT_DIGIT=52
    DIGIT=53
    LO_ALPHA=54
    HI_ALPHA=55
    ALPHA=56
    ALPHANUM=57
    VALIDINT=58
    MAYBEINT=59
    INVALINT=60
    IDENT=61
    CHARCONST=62
    BADCHARCONST=63

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    def tokInfo(self, *args):
    	return
    	non_token_indexes = []
    	for i in range(len(args)):
    		if not args[i].startswith("T_") and not args[i].startswith("N_"):
    			continue
    		else:
    			if len(non_token_indexes) > 0:
    				if non_token_indexes[-1] == i - 1 and args[non_token_indexes[-1]].startswith("T_"):
    					continue
    		non_token_indexes.append(i)

    	for i in non_token_indexes:
    		if args[i].startswith("T_"):
    			print("TOKEN: " + args[i] + "\t" + "LEXEME: " + args[i+1])

    	print(args[0] + " -> ", end='')
    	for i in non_token_indexes:
    		if i != 0:
    			print(args[i] + " ", end='')
    	print()


    class N_startContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def n_prog(self):
            return self.getTypedRuleContext(MIPLParser.N_progContext,0)


        def getRuleIndex(self):
            return MIPLParser.RULE_n_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_start" ):
                listener.enterN_start(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_start" ):
                listener.exitN_start(self)




    def n_start(self):

        localctx = MIPLParser.N_startContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_n_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.n_prog()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class N_addopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._T_PLUS = None # Token
            self._T_MINUS = None # Token
            self._T_OR = None # Token

        def T_PLUS(self):
            return self.getToken(MIPLParser.T_PLUS, 0)

        def T_MINUS(self):
            return self.getToken(MIPLParser.T_MINUS, 0)

        def T_OR(self):
            return self.getToken(MIPLParser.T_OR, 0)

        def getRuleIndex(self):
            return MIPLParser.RULE_n_addop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_addop" ):
                listener.enterN_addop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_addop" ):
                listener.exitN_addop(self)




    def n_addop(self):

        localctx = MIPLParser.N_addopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_n_addop)
        try:
            self.state = 108
            token = self._input.LA(1)
            if token in [MIPLParser.T_PLUS]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                localctx._T_PLUS = self.match(MIPLParser.T_PLUS)
                self.tokInfo("N_ADDOP", "T_PLUS", (None if localctx._T_PLUS is None else localctx._T_PLUS.text))

            elif token in [MIPLParser.T_MINUS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                localctx._T_MINUS = self.match(MIPLParser.T_MINUS)
                self.tokInfo("N_ADDOP", "T_MINUS", (None if localctx._T_MINUS is None else localctx._T_MINUS.text))

            elif token in [MIPLParser.T_OR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                localctx._T_OR = self.match(MIPLParser.T_OR)
                self.tokInfo("N_ADDOP", "T_OR", (None if localctx._T_OR is None else localctx._T_OR.text))

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class N_addoplstContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def n_addop(self):
            return self.getTypedRuleContext(MIPLParser.N_addopContext,0)


        def n_term(self):
            return self.getTypedRuleContext(MIPLParser.N_termContext,0)


        def n_addoplst(self):
            return self.getTypedRuleContext(MIPLParser.N_addoplstContext,0)


        def getRuleIndex(self):
            return MIPLParser.RULE_n_addoplst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_addoplst" ):
                listener.enterN_addoplst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_addoplst" ):
                listener.exitN_addoplst(self)




    def n_addoplst(self):

        localctx = MIPLParser.N_addoplstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_n_addoplst)
        try:
            self.state = 116
            token = self._input.LA(1)
            if token in [MIPLParser.T_RBRACK, MIPLParser.T_RPAREN, MIPLParser.T_COMMA, MIPLParser.T_SCOLON, MIPLParser.T_LT, MIPLParser.T_LE, MIPLParser.T_NE, MIPLParser.T_EQ, MIPLParser.T_GT, MIPLParser.T_GE, MIPLParser.T_DO, MIPLParser.T_ELSE, MIPLParser.T_END, MIPLParser.T_THEN]:
                self.enterOuterAlt(localctx, 1)
                \
                					self.tokInfo("N_ADDOPLST", "", "epsilon")

            elif token in [MIPLParser.T_PLUS, MIPLParser.T_MINUS, MIPLParser.T_OR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.n_addop()
                self.state = 112
                self.n_term()
                self.state = 113
                self.n_addoplst()
                \
                					self.tokInfo("N_ADDOPLST", "N_ADDOP", "N_TERM", "N_ADDOPLST")

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class N_arrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._T_ARRAY = None # Token
            self._T_LBRACK = None # Token
            self._T_RBRACK = None # Token
            self._T_OF = None # Token

        def T_ARRAY(self):
            return self.getToken(MIPLParser.T_ARRAY, 0)

        def T_LBRACK(self):
            return self.getToken(MIPLParser.T_LBRACK, 0)

        def n_idxrange(self):
            return self.getTypedRuleContext(MIPLParser.N_idxrangeContext,0)


        def T_RBRACK(self):
            return self.getToken(MIPLParser.T_RBRACK, 0)

        def T_OF(self):
            return self.getToken(MIPLParser.T_OF, 0)

        def n_simple(self):
            return self.getTypedRuleContext(MIPLParser.N_simpleContext,0)


        def getRuleIndex(self):
            return MIPLParser.RULE_n_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_array" ):
                listener.enterN_array(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_array" ):
                listener.exitN_array(self)




    def n_array(self):

        localctx = MIPLParser.N_arrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_n_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            localctx._T_ARRAY = self.match(MIPLParser.T_ARRAY)
            self.state = 119
            localctx._T_LBRACK = self.match(MIPLParser.T_LBRACK)
            self.state = 120
            self.n_idxrange()
            self.state = 121
            localctx._T_RBRACK = self.match(MIPLParser.T_RBRACK)
            self.state = 122
            localctx._T_OF = self.match(MIPLParser.T_OF)
            self.state = 123
            self.n_simple()
            \
            					self.tokInfo("N_ARRAY", "T_ARRAY", (None if localctx._T_ARRAY is None else localctx._T_ARRAY.text), "T_LBRACK", (None if localctx._T_LBRACK is None else localctx._T_LBRACK.text), "N_IDXRANGE", "T_RBRACK", (None if localctx._T_RBRACK is None else localctx._T_RBRACK.text), "T_OF", (None if localctx._T_OF is None else localctx._T_OF.text), "N_SIMPLE")
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class N_arrayvarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def n_entirevar(self):
            return self.getTypedRuleContext(MIPLParser.N_entirevarContext,0)


        def getRuleIndex(self):
            return MIPLParser.RULE_n_arrayvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_arrayvar" ):
                listener.enterN_arrayvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_arrayvar" ):
                listener.exitN_arrayvar(self)




    def n_arrayvar(self):

        localctx = MIPLParser.N_arrayvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_n_arrayvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.n_entirevar()
            self.tokInfo("N_ARRAYVAR", "N_ENTIREVAR")
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class N_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._T_ASSIGN = None # Token

        def n_variable(self):
            return self.getTypedRuleContext(MIPLParser.N_variableContext,0)


        def T_ASSIGN(self):
            return self.getToken(MIPLParser.T_ASSIGN, 0)

        def n_expr(self):
            return self.getTypedRuleContext(MIPLParser.N_exprContext,0)


        def getRuleIndex(self):
            return MIPLParser.RULE_n_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_assign" ):
                listener.enterN_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_assign" ):
                listener.exitN_assign(self)




    def n_assign(self):

        localctx = MIPLParser.N_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_n_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.n_variable()
            self.state = 130
            localctx._T_ASSIGN = self.match(MIPLParser.T_ASSIGN)
            self.state = 131
            self.n_expr()
            \
            					self.tokInfo("N_ASSIGN", "N_VARIABLE", (None if localctx._T_ASSIGN is None else localctx._T_ASSIGN.text), "N_EXPR")
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class N_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def n_vardecpart(self):
            return self.getTypedRuleContext(MIPLParser.N_vardecpartContext,0)


        def n_procdecpart(self):
            return self.getTypedRuleContext(MIPLParser.N_procdecpartContext,0)


        def n_stmtpart(self):
            return self.getTypedRuleContext(MIPLParser.N_stmtpartContext,0)


        def getRuleIndex(self):
            return MIPLParser.RULE_n_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterN_block" ):
                listener.enterN_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitN_block" ):
                listener.exitN_block(self)




    def n_block(self):
